# LatexMsc

./: .gitignore  README.md
mxnet/ExamplesForThesis/: rosenblatt_perceptron_imp.py  rosenblatt_perceptron_sym.py  simple_onnx_export.py  simple_onnx_export_1.py  symbolic_grad.py  training_data.py
onnx_experiments/models/: simple_onnx_export.onnx
onnx_experiments/notebooks/: .gitignore  Resnet152Modification.ipynb
onnx_experiments/python_examples/: .gitignore  ETH-USD.csv  linear_model_onnx.py  load_tensor.py  load_training_set.py  scikit_learn_exmp.py  scikit_learn_exmp_2.py
onnx_experiments/template/: CMakeLists.txt  main.cpp
text/: .gitignore  references.bib  thesistemplate.tex
text/assets/: aionnx.txt  aionnxml.txt  etherium_price_redict_model.xml  example_ref.txt  il_service_tree.tree  input_denotated.model  input_denotated_meta.model  linear_model.model  linear_model_pmml.py  output_denotated.model  output_denotated_meta.model  pmml_schema_snippet.xml
text/assets/images/: README.md
text/assets/pb/: example.proto3  modelproto.proto3  operator_set_id_proto.proto3
